Fixed contrast errors and added more accurate text

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ html {
   color: #222;
   font-size: 1em;
   line-height: 1.4;
+  scroll-behavior: smooth; 
 }
 
 /*
@@ -191,7 +192,7 @@ header nav ul li a {
 .important-nav {
   background-color: #E9B14C;
   border-radius: 100px;
-  color: #351d77;
+  color: #000;
 }
 
 /* ---------------------------- PROJECTS STYLES ---------------------------- */
@@ -256,6 +257,7 @@ span {
 .project-link {
   text-transform: uppercase;
   background-color: #EC91C4;
+  color: #000;
   padding: .75rem 2rem;
   margin: 30px 0 60px 0;
   border-radius: 10px;
@@ -284,7 +286,7 @@ span {
 }
 
 #skills li {
-  color: #351d77;
+  color: #000;
   text-transform: uppercase;
   width: 80%;
   background-color: #E9B14C;
@@ -398,7 +400,7 @@ span {
 }
 
 .social-icons li a p {
-  color: #351d77;
+  color: #000;
   height: 40px;
   width: 40px;
 }
